Refactor: Improve error handling and code clarity in DrugMenu and SupplierMenu; update access modifiers in FileService and SupplierService